# care-agent-graph

./: .env.example  AGENTS.md  README.md  pyproject.toml
src/agent/: __init__.py  classifier.py  graph.py  helpdesk.py  logger.py  models.py  services.py  slack.py  sniffspot.py
tests/: fakes.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_classifier.py  test_graph_workflow.py  test_helpdesk.py
