[project]
name = "care-agent-graph"
version = "0.0.1"
description = "LangGraph graphs for Sniffspot Care Agent."
authors = [
    { name = "Michal Trzcinka", email = "michal@sniffspot.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13,<4",
    "langchain-anthropic>=1.0.0",
    "langgraph>=1.2.2",
    "python-dotenv>=1.0.1",
    "python-helpscout-v2>=2.0.0",
    "slack-sdk>=3.42.0",
]


[project.optional-dependencies]
dev = ["mypy>=2.1.0", "ruff>=0.15.15"]

[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "E501",
    # This project uses print for manual local tools and dry-run output.
    "T201",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "langgraph-cli[inmem]>=0.4.27",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
